todo-backend/subhadip_ref/tmp/route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2019-12-10T09:46:51Z"
    labels:
      app: quotesapi
    name: quotesapi
    namespace: subhadipdhar-quotes-dev
    resourceVersion: "54161309"
    selfLink: /apis/route.openshift.io/v1/namespaces/subhadipdhar-quotes-dev/routes/quotesapi
    uid: fde941fb-1b31-11ea-93e7-0a580a80013d
  spec:
    host: quotesapi-subhadipdhar-quotes-dev.apps.ocp-na1.prod.nextcle.com
    port:
      targetPort: 8080-tcp
    subdomain: ""
    to:
      kind: Service
      name: quotesapi
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2019-12-10T09:46:51Z"
        status: "True"
        type: Admitted
      host: quotesapi-subhadipdhar-quotes-dev.apps.ocp-na1.prod.nextcle.com
      routerCanonicalHostname: apps.ocp-na1.prod.nextcle.com
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
