todo-backend/subhadip_ref/tmp/svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2019-12-10T09:44:13Z"
    labels:
      app: quotesapi
    name: quotesapi
    namespace: subhadipdhar-quotes-dev
    resourceVersion: "54160238"
    selfLink: /api/v1/namespaces/subhadipdhar-quotes-dev/services/quotesapi
    uid: 9f77538c-1b31-11ea-b8a2-0e3bf1a18b56
  spec:
    clusterIP: 172.30.202.230
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      app: quotesapi
      deploymentconfig: quotesapi
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2019-12-10T09:43:32Z"
    labels:
      app: quotesdb
    name: quotesdb
    namespace: subhadipdhar-quotes-dev
    resourceVersion: "54159914"
    selfLink: /api/v1/namespaces/subhadipdhar-quotes-dev/services/quotesdb
    uid: 870547b4-1b31-11ea-9664-02bc9323208e
  spec:
    clusterIP: 172.30.223.23
    ports:
    - name: 3306-tcp
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      app: quotesdb
      deploymentconfig: quotesdb
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
